[package]
name = "chan-signal"
version = "0.1.4"  #:version
authors = ["Andrew Gallant <jamslam@gmail.com>"]
description = "Listen to OS signals with channels."
documentation = "http://burntsushi.net/rustdoc/chan_signal/"
homepage = "https://github.com/BurntSushi/chan-signal"
repository = "https://github.com/BurntSushi/chan-signal"
readme = "README.md"
keywords = ["os", "signal", "channel", "select"]
license = "Unlicense/MIT"

[dependencies]
bit-set = "0.2.0"
chan = "0.1"
lazy_static = "0.1"
libc = "0.2"
