[package]
name = "chan-signal"
version = "0.3.1"  #:version
authors = ["Andrew Gallant <jamslam@gmail.com>"]
description = "Listen to OS signals with channels."
documentation = "https://docs.rs/chan-signal"
homepage = "https://github.com/BurntSushi/chan-signal"
repository = "https://github.com/BurntSushi/chan-signal"
readme = "README.md"
keywords = ["os", "signal", "channel", "select"]
license = "Unlicense/MIT"

[dependencies]
bit-set = "0.4"
chan = "0.1"
kernel32-sys = "0.2.1"
lazy_static = "0.2"
libc = "0.2"
winapi = "0.3.4"