[package]
name = "chan-signal"
version = "0.3.2"  #:version
authors = ["Andrew Gallant <jamslam@gmail.com>"]
description = "DEPRECATED. Use crossbeam-channel and signal-hook instead."
documentation = "https://docs.rs/chan-signal"
homepage = "https://github.com/BurntSushi/chan-signal"
repository = "https://github.com/BurntSushi/chan-signal"
readme = "README.md"
keywords = ["os", "signal", "channel", "select"]
license = "Unlicense/MIT"

[dependencies]
bit-set = "0.4"
lazy_static = "0.2"
libc = "0.2"
crossbeam-channel = "0.2"
